--- a/templates/blog/createarticle.html.twig
+++ b/templates/blog/createarticle.html.twig
@@ -14,6 +14,12 @@
 
     <br>
 
+    {{ form_row(formArticle.category, {
+        'attr' : { 'class': "form-control" }
+    }) }}
+
+    <br>
+
     {{ form_row(formArticle.content, {
         'attr': {'placeholder': "Contenu de l'article",
                   'class': "form-control"}
