--- a/templates/blog/index.html.twig
+++ b/templates/blog/index.html.twig
@@ -9,7 +9,7 @@
   <article>
     <h2>{{ article.title }}</h2>
     <div class="metadata">Ecrit le {{ article.createdAt | date('d/m/Y') }} à 
-    {{ article.createdAt | date('H:i') }} dans la partie Politique.</div>
+    {{ article.createdAt | date('H:i') }} dans la partie {{ article.category.title }}</div>
     <div class="content">
        <img src="{{ article.image }}" alt="">
        {{ article.content | raw }}
