--- a/templates/blog/show.html.twig
+++ b/templates/blog/show.html.twig
@@ -4,10 +4,20 @@
  <article>
     <h2>{{ article.title }}</h2>
     <div class="metadata">Ecrit le {{ article.createdAt | date('d/m/Y') }} à 
-    {{ article.createdAt | date('H:i') }} dans la partie Politique.</div>
+        {{ article.createdAt | date('H:i') }} dans la partie {{ article.category.title }}</div>
     <div class="content">
        <img src="{{ article.image }}" alt="">
        {{ article.content | raw }}
     </div>
   </article>
+  <section>
+  {% for comment in article.comments %}
+     <div class="comment">
+        <div class="row">
+            <div class="col-3">{{ comment.author }} <small>{{ comment.createdAt | date('d/m/Y à H:i')}}</small></div>
+            <div class="col-9">{{ comment.content | raw }}</div>
+        </div>
+     </div>
+   {% endfor %}  
+  </section>
 {% endblock %}
